--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="logo">
                     <h4 class="mb-0">room</h4>
                 </div>
-                <div class="menu-bar">
+                <div class="menu-bar position-relative">
                     <ul class="ps-0 me-auto mb-0 menu-list">
                         <li><a href="#">home</a></li>
                         <li><a href="#">shop</a></li>
@@ -73,7 +73,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="banner-text">
-                            <h1 class="mb-0">Discover innovative ways to dacorate</h1>
+                            <h1 class="mb-0 head-1">We are available all across the globe</h1>
                             <p class="mb-0 para-1">We provide unmatched quality, comfort and style for property owners across the country.Our experts combine form and function in bringing your vision to life. Create a room in your own with our collection and make your property a reflection of you and what you love.</p>
                             
                             <a href="#" class="text-uppercase">shop now <span><i class="fas fa-long-arrow-alt-right"></i></span></a>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="banner-text">
-                            <h1 class="mb-0">Discover innovative ways to dacorate</h1>
+                            <h1 class="mb-0 head-1">Manufactured with the best materials</h1>
                             <p class="mb-0 para-1">We provide unmatched quality, comfort and style for property owners across the country.Our experts combine form and function in bringing your vision to life. Create a room in your own with our collection and make your property a reflection of you and what you love.</p>
                             
                             <a href="#" class="text-uppercase">shop now <span><i class="fas fa-long-arrow-alt-right"></i></span></a>
