--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- ==========   google font    ============== -->
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <!-- ==========   slick css   ============= -->
-    <link rel="stylesheet" href="css/slick.css">
     <!-- ==========   bootstrap css   ============= -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- ==========   slick css   ============= -->
+    <link rel="stylesheet" href="css/slick.css">
+    <!-- ==========   aos css   ============= -->
+    <link rel="stylesheet" href="css/aos.css">
     <!-- ==========   main css   ============= -->
     <link rel="stylesheet" href="css/style.css">
     <!-- ==========   responsive css   ============= -->
@@ -23,7 +25,7 @@
     <!-- =============   navbar starts    ================= -->
     <nav>
         <div class="container">
-            <div class="menu1">
+            <div class="menu1" data-aos="zoom-in-left" data-aos-duration="1000" data-aos-delay="700">
                 <div class="menu-bar1 d-lg-none d-md-none">
                     <i class="fas fa-bars bar-1"></i>
                 </div>
@@ -45,7 +47,7 @@
 
     <!-- =============   banner starts    ================= -->
     <section id="banner">
-        <div class="banner-slider">
+        <div class="banner-slider" data-aos="zoom-in-up" data-aos-duration="1000">
             <div class="banner-item">
                 <div class="row mx-0">
                     <div class="col-lg-7 col-md-12 col-sm-12 gx-0">
@@ -109,18 +111,18 @@
             
             <div class="col-lg-12 col-md-12 col-sm-12 gx-0">
                 <div class="about-item">
-                    <div class="about-img">
+                    <div class="about-img" data-aos="fade-right" data-aos-duration="1000">
                         <img src="images/image-about-dark.jpg" alt="image-about-dark" class="img-fluid">
                     </div>
-                    <div class="about-text">
+                    <div class="about-text" data-aos="zoom-in" data-aos-duration="1000">
                         <h4 class="mb-0 text-uppercase">about our furniture</h4>
                         <p class="mb-0">Our multifunctional collection blends design and function suit your individual taste.make each room unique or pick a cohesive theme that best express your interests and what inspires you. Find the furniture pieces you need from traditional to contemporery styles or anything in between. Product specialists are available to help you create your dream space.</p>
                     </div>
-                    <div class="about-img ms-md-auto ms-sm-auto">
+                    <div class="about-img ms-md-auto ms-sm-auto" data-aos="fade-up" data-aos-duration="1000">
                         <img src="images/image-about-light.jpg" alt="image-about-light" class="img-fluid">
                     </div>
                 </div>
-                <div class="footer">
+                <div class="footer" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="0">
                     <p class="mb-0">&copy;2022 <span class="room text-uppercase">your shelter</span> </p>
                 </div>
             </div>
@@ -144,6 +146,7 @@
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/aos.js"></script>
     <script src="js/custom.js"></script>
 </body>
 </html>
